# dira-core

./: .gitignore  README.md  pyproject.toml
dira/: bootstrap.py  main.py
dira/console/: cli_ascender.py
dira/container/: container.py
dira/contracts/routing/: http_router.py
dira/database/: manager.py  model.py
dira/database/providers/: db_service.py  redis_service.py
dira/foundation/: application.py
dira/foundation/bootstrap/: boot_providers.py  connection_database.py  load_configuration.py  load_environment.py  register_providers.py
dira/foundation/console/: console_kernel.py
dira/foundation/http/: http_kernel.py
dira/processes/: process.py
dira/queue/: commands.py  job.py  queue_service.py
dira/queue/base/: callback.py  job.py  worker.py
dira/routing/: router.py  router_list.temp.py  routing_service.py
dira/support/: service_provider.py
dira/support/auth/: controller.py  form.py  middleware.py  model.py  service.py
diracore/: __init__.py  main.py
diracore/console/: __init__.py  cli.py
diracore/container/: bound_method.py  container.py
diracore/contracts/: kernel.py
diracore/contracts/foundation/: application.py
diracore/database/: manager.py
diracore/database/providers/: db_service.py  redis_service.py
diracore/foundation/: application.py
diracore/foundation/bootstrap/: boot_providers.py  (+4 more)
diracore/processes/: __init__.py  process.py
diracore/queue/: __init__.py  commands.py  job.py  queue_service.py
diracore/routing/: cli.py  router.py  router_list.temp.py  routing_service.py
diracore/support/: service_provider.py
(+28 files in other folders)
