[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "diracore"
version = "0.0.2"
description = ""
authors = ["DIRA Core"]
readme = "README.md"
packages = [{include = "diracore"}]


[tool.poetry.dependencies]
python = ">=3.11,<4.0"
redis = "^5.0.4"
rq = "^1.16.2"
rq-dashboard-fast = "^0.4.0"
inflection = "^0.5.1"
python-dotenv = "^1.0.0"
PyPika = "0.48.9"
pydantic-settings = "2.3.1"
tortoise = "^0.1.1"
tortoise-orm = "^0.20.1"
inflect = "^7.2.1"
python-jose = "^3.3.0"
pydantic = {extras = ["email"], version = "^2.7.1"}
bcrypt = "^4.1.3"
asyncpg = "^0.29.0"
tabulate = "^0.9.0"
orjson = "^3.10.3"
